--- a/pallyneweb/pally/templates/pally/index.html
+++ b/pallyneweb/pally/templates/pally/index.html
@@ -89,9 +89,9 @@
 								{% else %}
 								<ul class="brief-nav clearfix mb-15px">
 
-									<li><div class="mb-20px"><a href="#" class="button large light">Sign Up&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></div></li>
+									<li><div class="mb-20px"><a href="{% url 'register' %}" class="button large light">Sign Up&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></div></li>
 
-									<li><div class="mb-20px"><a href="#" class="button large light">Login &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></div></li>
+									<li><div class="mb-20px"><a href="{% url 'login' %}" class="button large light">Login &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></div></li>
 
 								</ul>
 								{% endif %}
@@ -303,7 +303,7 @@
 
 						</ul>
 						<div class="footer">
-							<a href="#" class="button medium">Sign Up</a>
+							<a href="{% url 'register' %}" class="button medium">Sign Up</a>
 						</div>
 					</div>
 					<!-- end column -->
@@ -325,7 +325,7 @@
 
 						</ul>
 						<div class="footer">
-							<a href="#" class="button medium">Sign Up</a>
+							<a href="{% url 'register' %}" class="button medium">Sign Up</a>
 						</div>
 					</div>
 					<!-- end column -->
@@ -346,7 +346,7 @@
 
 						</ul>
 						<div class="footer">
-							<a href="#" class="button medium">Sign Up</a>
+							<a href="{% url 'register' %}" class="button medium">Sign Up</a>
 						</div>
 					</div>
 					<!-- end column -->
