--- a/pallyneweb/pally/templates/registration/register_done.html
+++ b/pallyneweb/pally/templates/registration/register_done.html
@@ -28,7 +28,7 @@
           <h3> welcome  to the Pallyne Community! </h3>
             <div class="small-bar colored"></div>
 
-          <p> Your account has been successsfully created. You can <a href="{% url 'login' %}"> Log in </a> </p>
+          <p> Your account has been successsfully created.Check your email for an activation link to login to your account. You can <a href="{% url 'login' %}"> Log in </a> </p>
 
 
 
